# OOP_LABS_4

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
tests/: test_01.cpp
